# GraphCUDA

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
cpp/: README.md  main.py  matrix.cpp  pyproject.toml  setup.py
cpp/src/: main.cpp
cpp/src/graphcuda/: __init__.py
cpp/src/graphcuda/cpp/: gcn_test1.cpp  gcn_test2.cpp
cpp/src/graphcuda/cuda/: gcn.cpp  gcn.cu  gcn.cuh  gcn_cuda_kernel.cu  gemm_cublas.cu  gemm_cublas.cuh  matmul.cu  matmul.cuh  matmul2.cu  matmul3.cu  matmul4.cu  pybind.cu  spmm_cusparse.cuh
cpp/src/graphcuda/extra/: gcn.cu
cpp/tests/: manual.py
cpp/tests/gcn/: graphcuda_impl.py  pygeometric_impl.py  pytorch_impl.py
cpp/tests/matmul/: graphcuda_impl.py
cuda/: CMakeLists.txt  README.md  hello_cuda.cuh  main.cu
cuda_wrapper/: entrypoint.py  my_gcn_cuda.cpp
extra/cuda/: hello_cuda.cu
extra/cuda_wrapper/: my_gcn_cuda_kernel.cu  setup.py
extra/extra/: gcn_cuda.cpp
extra/graphcuda/: main.py
extra/lltm/benchmarks/: cpp_impl.py
extra/lltm/src/: lltm.cpp
extra/pybind/: CMakeLists.txt  my_op.cpp
extra/python/: main.py
extra/python/app/: numpy_gcn.py  (+1 more)
gcn_tests/: numpy_test.py  pygeometric_test.py  pytorch_test.py
graphcuda/: pyproject.toml
lltm/: main.py  pyproject.toml  setup.py
lltm/benchmarks/: original.py
lltm/python/: lltm.py
lltm/src/: lltm_cuda_kernel.cu
pybind/: README.md  example.cpp  main.py  pyproject.toml  setup.py
python/: README.md  pyproject.toml
python/app/: numpy_gcn_v2.py  pygeometric_gcn.py
src/graphcuda/: __init__.py
tests/gcn/: graphcuda_impl.py  pygeometric_impl.py  pytorch_impl.py
tests/matmul/: graphcuda_impl.py
(+7 files in other folders)
