[project]
name = "pybind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "pybind11>=3.0.0",
    "setuptools>=80.9.0",
    "torch==2.4.1",
]

[build-system]
requires = ["setuptools", "wheel", "torch"]
build-backend = "setuptools.build_meta"
